@@ -1,3 +1,10 @@
+2003-07-23  Nick Garnett  <nickg@balti.calivar.com>
+
+	* include/eth_drv.h:
+	* src/net/eth_drv.c:
+	Added an ifndef to fix warnings about NBPFILTER not being
+	defined. 
+
 2003-03-20  Mark Salter  <msalter@redhat.com>
 
 	* cdl/eth_drivers.cdl (CYGHWR_NET_DRIVERS): Moved here from net/common.
